# aws-lambda-web-gateway

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml.example
k8s/: deployment.yml  ingress.yml  service.yml
src/: config.rs  config_tests.rs  lib.rs  lib_tests.rs  main.rs  tests.rs
