[package]
name = "lambda-web-gateway"
version = "0.1.0"
authors = ["Harold Sun <sunhua@amazon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bytes = "1.6.0"
log = "0.4.14"
futures = "0.3.14"
rustls = "0.23.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1"
url = "2.5.0"
axum ={ version = "0.7.5"}
aws-config = { version = "1.2.1" }
aws-sdk-lambda = { version = "1.22.0" }
aws-smithy-types = { version="1.1.8", features = ["serde-serialize"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version= "0.3.18", features = ["json"]}
tracing ={ version = "0.1.40"}
tokio-stream = "0.1.15"
futures-util = "0.3.30"
http-serde = "2.1.0"

[[bin]]
name = "lambda-web-gateway"
path = "src/main.rs"

[lib]
name = "lambda_web_gateway"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
